--- a/README
+++ b/README
@@ -1,12 +1,26 @@
-APE stands for Atom Protocol Exerciser, and that’s what it does. It’s written in Ruby, and is 
-designed to run on the Web, with a nice HTML interface describing its interactions with the 
-APP server under test. 
+== Atom Protocol Exerciser (APE)
+
+APE is a sanity-checker for implementations of the Atom Publishing Protocol (AtomPub or APP). It is written in Ruby,
+and provides a Mongrel-based HTML interface describing its interactions with the APP implementation under test.
+
+For more information about the history and impetus for the creation of APE, see Tim Bray's account here[http://www.tbray.org/ongoing/When/200x/2006/08/11/Meet-the-Ape].
   
 == Licence
 
-Copyright © 2006 Sun Microsystems, Inc. All rights reserved
-Use is subject to license terms - see file "LICENSE"
+Copyright (c) 2006 Sun Microsystems, Inc. All rights reserved. See the included LICENSE[link:/files/LICENSE.html] file for details.
 
-== Install
+== Quick Start
 
-  sudo gem install ape
+Install APE via RubyGems:
+
+ $ gem install ape
+ 
+Now, you should have the ape_server command available in your $PATH. Start the server with:
+
+ $ ape_server
+ 
+This will start the server in the foreground. You can access APE in your browser at http://localhost:4000
+
+== The Source
+
+To access the latest source code for APE, see the project site at https://ape.dev.java.net
