changed frontend messages
git-svn-id: svn+ssh://rubyforge.org/var/svn/ape/trunk@10 d43e647d-18ea-4ebb-b362-cbe88fbed885

--- a/README
+++ b/README
@@ -23,4 +23,4 @@ This will start the server in the foreground. You can access APE in your browser
 
 == The Source
 
-To access the latest source code for APE, see the project site at https://ape.dev.java.net
+To access the latest source code for APE, see the project site at https://rubyforge.org/projects/ape
